--- a/po/de.po
+++ b/po/de.po
@@ -1,14 +1,13 @@
-# Translation of R.po to german
-# Copyright (C) 2005-2010 The R Foundation
+# Translation of po/R.pot to German.
+# Copyright (C) 2005-2011 The R Foundation
 # This file is distributed under the same license as the R package.
-# Detlef Steuer <steuer@hsu-hh.de>, 2005-2010.
-#
+# Detlef Steuer <steuer@hsu-hh.de>, 2005-2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: R-2.12.0\n"
+"Project-Id-Version: R-2.13.0\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
-"POT-Creation-Date: 2011-03-22 15:33+0000\n"
-"PO-Revision-Date: 2010-09-21 14:14+0200\n"
+"POT-Creation-Date: 2011-03-25 10:04+0000\n"
+"PO-Revision-Date: 2011-03-23 09:35+0100\n"
 "Last-Translator: Detlef Steuer <steuer@hsu-hh.de>\n"
 "Language-Team: R-core <R-core@r-project.org>\n"
 "Language: \n"
@@ -805,6 +804,8 @@ msgstr ""
 #: src/main/agrep.c:84 src/main/grep.c:173 src/main/grep.c:800
 msgid "string marked as \"bytes\" found, so using useBytes = TRUE"
 msgstr ""
+"Zeichenkette markiert, da \"bytes\" gefunden, also wird useBytes = TRUE "
+"benutzt"
 
 #: src/main/agrep.c:107 src/main/grep.c:827 src/main/grep.c:2215
 msgid "regular expression is invalid in this locale"
@@ -860,7 +861,7 @@ msgstr "Typ '%s' wird nicht unterstützt"
 #: src/main/apply.c:212
 #, c-format
 msgid "dimnames(<value>) is neither NULL nor list of length %d"
-msgstr ""
+msgstr "dimnames(<value>) ist weder NULL noch Liste der Länge %d"
 
 #: src/main/arithmetic.c:35
 msgid "NaNs produced"
@@ -943,9 +944,8 @@ msgid "%d arguments passed to 'log' which requires 1 or 2"
 msgstr "%d arguments an 'log' üergeben, das 1 oder 2 braucht"
 
 #: src/main/array.c:79
-#, fuzzy
 msgid "'data' must be of a vector type"
-msgstr "'path' muss eine Charaktervektor sein"
+msgstr "'data' muss vom Typ vector sein"
 
 #: src/main/array.c:93 src/main/array.c:101
 msgid "non-numeric matrix extent"
@@ -1409,7 +1409,7 @@ msgstr "'...' in falschem Kontext benutzt"
 #: src/main/builtin.c:922
 #, c-format
 msgid "duplicate switch defaults: '%s' and '%s'"
-msgstr ""
+msgstr "doppelter Default für switch: '%s' und '%s'"
 
 #: src/main/builtin.c:955
 msgid "'EXPR' is missing"
@@ -1429,6 +1429,8 @@ msgstr "'%s' benötigt einen Charakter-Vektor"
 msgid ""
 "number of characters is not computable for element %d in \"bytes\" encoding"
 msgstr ""
+"Anzahl der Zeichen ist nicht berechenbar für das Element %d, wenn\n"
+"\"bytes\"-Kodierung benutzt wird"
 
 #: src/main/character.c:160 src/main/character.c:188 src/main/character.c:637
 #: src/main/character.c:733
@@ -1440,6 +1442,8 @@ msgstr "ungültige multibyte Zeichenkette %d"
 #, c-format
 msgid "width is not computable for element %d in \"bytes\" encoding"
 msgstr ""
+"Breite ist nicht berechenbar für das Element %d, wenn \"bytes\"-Kodierung "
+"benutzt wird\""
 
 #: src/main/character.c:252
 msgid "extracting substrings from a non-character object"
@@ -1971,15 +1975,15 @@ msgstr ""
 "Initialisierung der bzip2-Kompression für Datei '%s' ist fehlgeschlagen"
 
 #: src/main/connections.c:1436
-#, fuzzy
 msgid "allocation of overflow buffer for bzfile failed"
-msgstr "Allokation einer Dateiverbindung fehlgeschlagen"
+msgstr "Allokation des overflow buffers für bzfile fehlgeschlagen"
 
 #: src/main/connections.c:1443
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "file '%s' has trailing content that appears not to be compressed by bzip2"
-msgstr "Datei '%s' scheint nicht mit bzip2 komprimiert zu sein"
+msgstr ""
+"Datei '%s' endet mit Inhalt, der nicht mit bzip2 komprimiert zu sein scheint"
 
 #: src/main/connections.c:1489 src/main/connections.c:1493
 #: src/main/connections.c:1499 src/main/connections.c:1516
@@ -2749,9 +2753,9 @@ msgid "too many arguments"
 msgstr "zu viele Argumente"
 
 #: src/main/dotcode.c:786 src/main/dotcode.c:830 src/main/dotcode.c:1658
-#, fuzzy, c-format
+#, c-format
 msgid "Incorrect number of arguments (%d), expecting %d for '%s'"
-msgstr "Falsche Anzahl von Argumenten (%d), erwarte %d für %s"
+msgstr "Falsche Anzahl von Argumenten (%d), erwarte %d für '%s'"
 
 #: src/main/dotcode.c:1487 src/main/dotcode.c:2290
 msgid "too many arguments, sorry"
@@ -2811,14 +2815,12 @@ msgid "zip path is too long"
 msgstr "Pfad aus zip ist zu lang"
 
 #: src/main/dounzip.c:270
-#, fuzzy
 msgid "'exdir' is too long"
-msgstr "'destination' ist zu lang"
+msgstr "'exdir' ist zu lang"
 
 #: src/main/dounzip.c:273
-#, fuzzy
 msgid "'exdir' does not exist"
-msgstr "Menü existiert nicht"
+msgstr "'exdir' existiert nicht"
 
 #: src/main/dounzip.c:297
 msgid "requested file not found in the zip file"
@@ -3066,9 +3068,8 @@ msgid "first argument must be a named list"
 msgstr "das erste Argument muss eine benannte Liste sein"
 
 #: src/main/envir.c:1554
-#, fuzzy
 msgid "names(x) must be a character vector of the same length as x"
-msgstr "'hostname' muss eine Charaktervektor der Länge 1 sein"
+msgstr "names(x) muss ein Charaktervektor so lang wie x sein"
 
 #: src/main/envir.c:1584
 msgid "cannot remove variables from base namespace"
@@ -3570,9 +3571,9 @@ msgid "dispatch error in group dispatch"
 msgstr "Dispatch Fehler beim Gruppendispatch"
 
 #: src/main/eval.c:2888
-#, fuzzy, c-format
+#, c-format
 msgid "\"%s\" is not a %s function"
-msgstr "'%s' ist keine Funktion"
+msgstr "\"%s\" ist keine %s Funktion"
 
 #: src/main/eval.c:3053
 msgid "node stack overflow"
@@ -3609,9 +3610,9 @@ msgid "not a simple matrix"
 msgstr "keine einfache Matrix"
 
 #: src/main/eval.c:3458
-#, fuzzy, c-format
+#, c-format
 msgid "invalid %s type in 'x %s y'"
-msgstr "ungültiger 'x' Typ in 'x %s y'"
+msgstr "ungültiger %s Typ in 'x %s y'"
 
 #: src/main/eval.c:3524
 msgid "bytecode version mismatch; using eval"
@@ -3644,19 +3645,19 @@ msgstr "unbrauchbare Funktion"
 #: src/main/eval.c:4291
 msgid "numeric EXPR required for switch() without named alternatives"
 msgstr ""
+"für switch() ohne benannte Alternativen ist ein numerischer Ausdruck nötig"
 
 #: src/main/eval.c:4294
 msgid "bad character switch offsets"
-msgstr ""
+msgstr "unzulässige switch Offsets für Charakter"
 
 #: src/main/eval.c:4296
-#, fuzzy
 msgid "bad switch names"
-msgstr "unbrauchbarer Dateiname"
+msgstr "unzulässige switch Namen"
 
 #: src/main/eval.c:4310
 msgid "bad numeric switch offsets"
-msgstr ""
+msgstr "unzulässige switch Offsets für numerischen Wert"
 
 #: src/main/eval.c:4381
 msgid "cannot find index for threaded code address"
@@ -3691,29 +3692,21 @@ msgstr "'ascii' muss ein logischer Wert sein"
 msgid "R_CompiledFileName: buffer too small"
 msgstr "R_CompiledFileName: Buffer zu klein"
 
-#: src/main/eval.c:4616
-#, fuzzy
-msgid "constand buffer must be a generic vector"
-msgstr "Code muss ein generischer Vektor sein"
+#: src/main/eval.c:4616 src/main/eval.c:4665
+msgid "constant buffer must be a generic vector"
+msgstr "constant buffer muss ein generischer Vektor sein"
 
 #: src/main/eval.c:4635
-#, fuzzy
 msgid "constBuf must be a generic vector"
-msgstr "Code muss ein generischer Vektor sein"
+msgstr "constBuf muss ein generischer Vektor sein"
 
 #: src/main/eval.c:4639
-#, fuzzy
 msgid "bad constCount value"
-msgstr "keine Konturwerte"
-
-#: src/main/eval.c:4665
-#, fuzzy
-msgid "constant buffer must be a generic vector"
-msgstr "Code muss ein generischer Vektor sein"
+msgstr "unbrauchbarer Wert für constCount"
 
 #: src/main/eval.c:4667
 msgid "bad constant count"
-msgstr ""
+msgstr "unzulässige Anzahl von Konstanten"
 
 #: src/main/eval.c:4703
 msgid "profile timer in use"
@@ -3833,7 +3826,7 @@ msgstr "Zeilenende"
 #: src/main/gram.y:1756 src/main/gram.y:1762
 #, c-format
 msgid "unexpected %s"
-msgstr "Unerwartetes %s"
+msgstr "Unerwartete(s) %s"
 
 #: src/main/gram.y:1772
 #, c-format
@@ -4013,14 +4006,14 @@ msgid "Metric information not available for this device"
 msgstr "Metrische Information für dieses Device nicht möglich"
 
 #: src/main/grep.c:89
-#, fuzzy, c-format
+#, c-format
 msgid "invalid regular expression '%s', reason '%s'"
-msgstr "ungültige regular expression '%s'"
+msgstr "ungültiger regulärer Ausdruck '%s', Grund '%s'"
 
 #: src/main/grep.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "invalid regular expression, reason '%s'"
-msgstr "ungültige regular expression '%s'"
+msgstr "ungültiger regulärer Ausdruck '%s'"
 
 #: src/main/grep.c:148 src/main/grep.c:751 src/main/grep.c:753
 #: src/main/grep.c:1023 src/main/grep.c:1031 src/main/grep.c:1478
@@ -4084,6 +4077,8 @@ msgstr "ungültige regular expression '%s'"
 #: src/main/grep.c:1240
 msgid "pattern matches an empty string infinitely, returning first match only"
 msgstr ""
+"Das Muster passt unendlich oft auf eine leere Zeichenkette, nur erster\n"
+"Treffer zurückgegeben"
 
 #: src/main/grep.c:1535
 msgid "'pattern' is invalid UTF-8"
@@ -4384,14 +4379,14 @@ msgid "unprotect_ptr: pointer not found"
 msgstr "unprotect_ptr: Zeiger nicht gefunden"
 
 #: src/main/memory.c:2799
-#, fuzzy, c-format
+#, c-format
 msgid "Calloc could not allocate memory (%.0f of %u bytes)"
-msgstr "Calloc konnte nicht (%d von %d) Speicher zuteilen"
+msgstr "Calloc konnte keinen  Speicher (%.0f von %u Bytes) zuteilen"
 
 #: src/main/memory.c:2810
-#, fuzzy, c-format
+#, c-format
 msgid "Realloc could not re-allocate memory (%.0f bytes)"
-msgstr "Realloc konnte nicht (size %d) Speicher re-allozieren"
+msgstr "Realloc konnte keinen Speicher re-allozieren (%.0f Bytes)"
 
 #: src/main/memory.c:3029
 msgid "not safe to return vector pointer"
@@ -5246,33 +5241,30 @@ msgid "symlinks are not supported on this platform"
 msgstr "symbolische Links auf dieser Platform nicht unterstützt"
 
 #: src/main/platform.c:675
-#, fuzzy, c-format
+#, c-format
 msgid "cannot link '%ls' to '%ls', reason '%s'"
-msgstr "kann '%s' nicht auf '%s' symlinken. Grund '%s'"
+msgstr "kann '%ls' nicht auf '%ls' linken, Grund '%s'"
 
 #: src/main/platform.c:695
-#, fuzzy, c-format
+#, c-format
 msgid "cannot link '%s' to '%s', reason '%s'"
-msgstr "kann '%s' nicht auf '%s' symlinken. Grund '%s'"
+msgstr "kann '%s' nicht auf '%s' linken, Grund '%s'"
 
 #: src/main/platform.c:704
-#, fuzzy
 msgid "(hard) links are not supported on this platform"
-msgstr "symbolische Links auf dieser Platform nicht unterstützt"
+msgstr "(Hard-)Links werden auf dieser Platform nicht unterstützt"
 
 #: src/main/platform.c:735
 msgid "'from' and 'to' are of different lengths"
-msgstr ""
+msgstr "'from' und 'to' sind unterschiedlich lang"
 
 #: src/main/platform.c:746 src/main/platform.c:756
-#, fuzzy
 msgid "expanded 'from' name too long"
-msgstr "vollständiger Sourcepfadname zu lang"
+msgstr "expandierter Name 'from' zu lang"
 
 #: src/main/platform.c:750 src/main/platform.c:760
-#, fuzzy
 msgid "expanded 'to' name too long"
-msgstr "vollständiger Sourcepfadname zu lang"
+msgstr "expandierter 'to' Name zu lang"
 
 #: src/main/platform.c:764
 #, c-format
@@ -5345,39 +5337,39 @@ msgid "'%ls' already exists"
 msgstr "'%ls' existiert bereits"
 
 #: src/main/platform.c:2091
-#, fuzzy, c-format
+#, c-format
 msgid "cannot create dir '%ls', reason '%s'"
-msgstr "kann Verzeichnis '%s' nicht erzeugen. Grund '%s'"
+msgstr "kann Verzeichnis '%ls' nicht erzeugen, Grund '%s'"
 
 #: src/main/platform.c:2121
-#, fuzzy, c-format
+#, c-format
 msgid "problem creating directory %ls: %s"
-msgstr "Problem mit laufendem Editor %s"
+msgstr "Problem beim erzeugen von Verzeichnis %ls: %s"
 
 #: src/main/platform.c:2136
-#, fuzzy, c-format
+#, c-format
 msgid "problem reading dir %ls: %s"
-msgstr "Problem mit laufendem Editor %s"
+msgstr "Problem beim Lesen von Verzeichnis %ls: %s"
 
 #: src/main/platform.c:2149
 #, c-format
 msgid "problem copying %ls to %ls: %s"
-msgstr ""
+msgstr "Problem %ls nach %ls zu kopieren: %s"
 
 #: src/main/platform.c:2265
-#, fuzzy, c-format
+#, c-format
 msgid "problem creating directory %s: %s"
-msgstr "Problem mit laufendem Editor %s"
+msgstr "Problem beim Erzeugen von Verzeichnis %s: %s"
 
 #: src/main/platform.c:2279
-#, fuzzy, c-format
+#, c-format
 msgid "problem reading directory %s: %s"
-msgstr "Problem mit laufendem Editor %s"
+msgstr "Problem beim Lesen aus Verzeichnis %s: %s"
 
 #: src/main/platform.c:2295
 #, c-format
 msgid "problem copying %s to %s: %s"
-msgstr ""
+msgstr "Problem %s nach %s zu kopieren: %s"
 
 #: src/main/platform.c:2417
 msgid "'mode' must be of length at least one"
@@ -6013,7 +6005,6 @@ msgid "cannot save namespace in version 1 workspaces"
 msgstr "kann namespace in Version 1 workspace nicht sichern"
 
 #: src/main/saveload.c:913
-#, fuzzy
 msgid ""
 "cannot save environment with locked/active bindings in version 1 workspaces"
 msgstr ""
@@ -6176,9 +6167,8 @@ msgid "connection not open for reading"
 msgstr "Verbindung nicht zum Lesen geöffnet"
 
 #: src/main/saveload.c:2345
-#, fuzzy
 msgid "can only load() from a binary connection"
-msgstr "kann nur aus binärer Verbindung lesen"
+msgstr "load() funktioniert  nur aus binärer Verbindung"
 
 #: src/main/saveload.c:2356
 msgid "no input is available"
@@ -6303,9 +6293,9 @@ msgid "attempt to replicate non-vector"
 msgstr "Versuch einen Nicht-Vektor zu replizieren"
 
 #: src/main/seq.c:383 src/main/seq.c:390 src/main/seq.c:519 src/main/seq.c:696
-#, fuzzy, c-format
+#, c-format
 msgid "first element used of '%s' argument"
-msgstr "nur das erste Element des 'url' Arguments wird benutzt"
+msgstr "das erste Element des '%s' Arguments benutzt"
 
 #: src/main/seq.c:517
 msgid "'length.out' must be a non-negative number"
@@ -6469,9 +6459,8 @@ msgid "bad version value"
 msgstr "unbrauchbarer Wert für Version"
 
 #: src/main/serialize.c:1849
-#, fuzzy
 msgid "binary-mode connection required for ascii=FALSE"
-msgstr "binäre Operationen verlangen zwei Argumente"
+msgstr "binäre Verbindung für ascii=FALSE benötigt"
 
 #: src/main/serialize.c:2007 src/main/serialize.c:2034
 #: src/main/serialize.c:2095
@@ -6807,6 +6796,7 @@ msgstr "Ergebnis hat Länge 0 und kann deshalb kein Objekt der Sprache sein"
 msgid ""
 "[[<- defined for objects of type \"S4\" only for subclasses of environment"
 msgstr ""
+"[[<- für Objekte vom \"S4\"-Typ nur für Unterklassen von Umgebungen definiert"
 
 #: src/main/subassign.c:1507
 msgid "wrong args for environment subassignment"
@@ -6991,13 +6981,13 @@ msgstr "kann Zeit der letzten Dateiänderung von '%s' nicht feststellen"
 
 #: src/main/sysutils.c:167
 msgid "encoding of a filename cannot be 'bytes'"
-msgstr ""
+msgstr "ein Dateiname kann nicht mit 'bytes' kodiert werden"
 
 #: src/main/sysutils.c:170 src/main/sysutils.c:758 src/main/sysutils.c:773
 #: src/main/sysutils.c:867
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported conversion from '%s' in codepage %d"
-msgstr "nicht unterstützte Umwandlung von '%s' nach '%s'"
+msgstr "nicht unterstützte Umwandlung von '%s' in codepage %d"
 
 #: src/main/sysutils.c:179
 msgid "file name conversion problem -- name too long?"
@@ -7054,9 +7044,9 @@ msgid "'x' must be a character vector"
 msgstr "'x' muss ein Charaktervektor sein"
 
 #: src/main/sysutils.c:613
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported conversion from '%s' to '%s' in codepage %d"
-msgstr "nicht unterstützte Umwandlung von '%s' nach '%s'"
+msgstr "nicht unterstützte Umwandlung von '%s' nach '%s' in codepage %d"
 
 #: src/main/sysutils.c:681 src/main/sysutils.c:744 src/main/sysutils.c:843
 #: src/main/sysutils.c:857 src/main/sysutils.c:932
@@ -7066,12 +7056,12 @@ msgstr "'%s' muss für CHARSXP aufgerufen werden"
 
 #: src/main/sysutils.c:747 src/main/sysutils.c:862 src/main/sysutils.c:935
 msgid "translating strings with \"bytes\" encoding is not allowed"
-msgstr ""
+msgstr "Übersetzung von Zeichenketten mit \"bytes\"-Kodierung nicht erlaubt"
 
 #: src/main/sysutils.c:961
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported conversion to '%s' from codepage %d"
-msgstr "nicht unterstützte Umwandlung von '%s' nach '%s'"
+msgstr "nicht unterstützte Umwandlung von '%s' aus codepage %d"
 
 #: src/main/sysutils.c:1374
 msgid "cannot mkdir R_TempDir"
@@ -7095,9 +7085,8 @@ msgid "cannot find unused tempfile name"
 msgstr "kann keinen ungenutzten temporären Dateinamen finden"
 
 #: src/main/sysutils.c:1448
-#, fuzzy
 msgid "allocation failed in R_tmpnam2"
-msgstr "Allokationsfehler in R_tmpnam"
+msgstr "Allokationsfehler in R_tmpnam2"
 
 #: src/main/sysutils.c:1474
 msgid "proc.time() is not implemented on this system"
@@ -7129,14 +7118,12 @@ msgid "any_duplicated3(., <0-length incomp>)"
 msgstr "any_duplicated3(., <0-length incomp>)"
 
 #: src/main/unique.c:538
-#, fuzzy
 msgid "'fromLast' must be length 1"
-msgstr "'%s' muss Länge 1 haben"
+msgstr "'fromLast' muss Länge 1 haben"
 
 #: src/main/unique.c:541
-#, fuzzy
 msgid "'fromLast' must be TRUE or FALSE"
-msgstr "'resize' muss TRUE oder FALSE sein"
+msgstr "'fromLast' muss TRUE oder FALSE sein"
 
 #: src/main/unique.c:550
 #, c-format
@@ -8291,6 +8278,9 @@ msgstr "X11 nicht verfügbar"
 #~ msgid "invalid '%s' arguemnt"
 #~ msgstr "ungültiges '%s' Argument"
 
+#~ msgid "constand buffer must be a generic vector"
+#~ msgstr "constant buffer muss ein generischer Vektor sein"
+
 #~ msgid "invalid 'tempdir' in R_tmpnam"
 #~ msgstr "ungültiges 'tempdir' in R_tmpnam"
 
@@ -8451,14 +8441,6 @@ msgstr "X11 nicht verfügbar"
 #~ msgid "empty expression in return value"
 #~ msgstr "leerer Ausdruck im Rückgabewert"
 
-#, fuzzy
-#~ msgid "%s not yet implemented for this device"
-#~ msgstr "gc.time() ist auf diesem System nicht implementiert"
-
-#, fuzzy
-#~ msgid "'xzfile' is not supported in this build of R"
-#~ msgstr "ICU wird in diesem Binary nicht unterstützt"
-
 #~ msgid "internal error in R_compress1"
 #~ msgstr "interner Fehler in R_compress1"
 
@@ -8538,14 +8520,6 @@ msgstr "X11 nicht verfügbar"
 #~ msgstr ""
 #~ "Warnung:  multibyte Lokalisierungen werden in diesem Build von R nicht "
 #~ "unterstützt\n"
-
-#, fuzzy
-#~ msgid "duplicate condition argument"
-#~ msgstr "ungültiges zweites Argument"
-
-#, fuzzy
-#~ msgid "duplicate expr argument"
-#~ msgstr "Nicht-Charakter Argument"
 
 #~ msgid "Success"
 #~ msgstr "Erfolg"
@@ -8736,10 +8710,6 @@ msgstr "X11 nicht verfügbar"
 #~ msgid "'gamma' cannot be modified on this device"
 #~ msgstr "'gamma' kann auf diesem Device nicht modifiziert werden"
 
-#, fuzzy
-#~ msgid "Unable to open file '%s': %s"
-#~ msgstr "Kann Datei '%s' nicht öffnen"
-
 #~ msgid "unable to open connection"
 #~ msgstr "kann Verbindung nicht öffnen"
 
@@ -8755,14 +8725,6 @@ msgstr "X11 nicht verfügbar"
 #~ msgstr ""
 #~ "kann Datei '%s' nicht öffnen. Grund '%s'\n"
 #~ "\n"
-
-#, fuzzy
-#~ msgid "unable to start device jpeg"
-#~ msgstr "kann Device %s nicht starten"
-
-#, fuzzy
-#~ msgid "invalid '%s' value), "
-#~ msgstr "ungültiger '%s' Wert"
 
 #~ msgid "invalid 'only.values'"
 #~ msgstr "ungültige 'only.values'"
@@ -8791,10 +8753,6 @@ msgstr "X11 nicht verfügbar"
 #~ msgid "invalid HSV color"
 #~ msgstr "ungültige HSV Farbe"
 
-#, fuzzy
-#~ msgid "invalid value of '%s'"
-#~ msgstr "ungültiger Wert für '%s'"
-
 #~ msgid "invalid value for 'which'"
 #~ msgstr "ungültiger Wert für 'which'"
 
@@ -8815,10 +8773,6 @@ msgstr "X11 nicht verfügbar"
 
 #~ msgid "invalid 'what' specified"
 #~ msgstr "ungültiges 'what' angegeben"
-
-#, fuzzy
-#~ msgid "invalid value of 'title' in devWindows"
-#~ msgstr "ungültiger Wert von 'allow_'"
 
 #~ msgid "Invalid color"
 #~ msgstr "ungültige Farbe"
