--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -5780,6 +5780,42 @@ It is possible to run all the examples, tests and vignettes covered by
 @code{R CMD check} under @code{gctorture(TRUE)} by using the option
 @option{--use-gct}.
 
+The function @code{gctorture2} provides more refined control over the GC
+torture process.  Its arguments @code{step}, @code{wait} and
+@code{inhibit_release} are documented on its help page.  Environment
+variables can also be used to turn on GC torture: @env{R_GCTORTURE}
+corresponds to the @code{step} argument to @code{gctorture},
+@env{R_GCTORTURE_WAIT} to @code{wait}, and
+@env{R_GCTORTURE_INHIBIT_RELEASE} to @code{inhibit_release}.
+
+If @R{} is configured with @option{--enable-strict-barrier} then a
+variety of tests for the integrity of the write barrier are enabled.  In
+addition tests to help detect protect issues are enabled as well:
+
+@itemize @bullet
+
+@item
+All GCs are full GCs.
+
+@item
+New nodes in small node pages are marked as @code{NEWSXP} on creation.
+
+@item
+After a GC all free nodes that are not of type @code{NEWSXP} are marked
+as type @code{FREESXP} and their previous type is recorded.
+
+@item
+Most calls to accessor functions check their @code{SEXP} inputs and
+@code{SEXP} outputs and signal an error if a @code{FREESXP} is found.
+The address of the node and the old type are included in the error
+message.
+
+@end itemize
+
+Used with a debugger and with @code{gctorture} or @code{gctorture2} this
+mechanism can be helpful in isolating memory protect problems.
+
+
 @node Using valgrind,  , Using gctorture, Using gctorture and valgrind
 @subsection Using valgrind
 
