--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -2059,21 +2059,32 @@ encoding.  That needs to be declared to @LaTeX{} via a line like
 @end example
 @noindent
 The problem is that this cannot be known in advance, so vignette PDFs
-may only be re-createable on the author's own machine.
+may only be re-createable on the author's own machine. @command{R CMD
+check} will report on any non-ASCII vignettes it finds which do not have
+such a declaration.  (It is also possible to use the more recent
+@samp{inputenx} @LaTeX{} package.)
 
-It will also parse and evaluate the @R{} code in each chunk: this should
-be fine as it has already converted the code to the current locale
-(provided that covers the characters used in the code chunks in the
-sources).  The @R{} output will also be in the current locale, and
-should be covered by the @samp{inputenc} declaration.  One thing people
-often forget is that the @R{} output may not be ASCII even for ASCII
-@R{} sources, for many possible reasons.  One common one is the use of
-`fancy' quotes: see the @R{} help on @code{sQuote}.
+@code{Sweave()} will also parse and evaluate the @R{} code in each
+chunk: this should be fine as it has already converted the code to the
+current locale (provided that covers the characters used in the code
+chunks in the sources).  The @R{} output will also be in the current
+locale, and should be covered by the @samp{inputenc} declaration.  One
+thing people often forget is that the @R{} output may not be ASCII even
+for ASCII @R{} sources, for many possible reasons.  One common one is
+the use of `fancy' quotes: see the @R{} help on @code{sQuote}.
 
 The final issue is the encoding of figures -- this applies only to PDF
 figures and not PNG etc.  The PDF figures will contain declarations for
 their encoding, but the Sweave option @code{pdf.encoding} may need to be
-set appropriately.
+set appropriately: see the help for the @code{pdf()} graphics device.
+
+As a real example of the complexities, consider the @pkg{fortunes}
+package version @samp{1.4-0}.  That package does not have a declared
+encoding, and its vignette is ASCII.  However, the data it displays are
+read from a UTF-8 CSV file, and will be assumed to be in the current
+encoding, so @file{fortunes.tex} will be in UTF-8 in any locale.  Had
+@code{read.table} been told the data were UTF-8, @file{fortunes.tex}
+would have been in the locale's encoding.
 
 @node Submitting a package to CRAN, Package name spaces, Writing package vignettes, Creating R packages
 @section Submitting a package to @acronym{CRAN}
